---
changes:
- Fixed rt53453 with test case - Make Jemplate slice like TT slice
- Fixed rt53967 with test case - Compiler double-dot path fail
- Added test case for rt37539 - Intermediate instantiation
- Added test case for rt37540 - Iterate over empty object
- Added test case for rt37895 - Inconsistent jemplate version

---
version: 0.25
date:    Wednesday April 21 13:44:19 PDT 2010
changes:
- release

---
version: 0.24_4
date:    Saturday January 09 17:06:40 PST 2010
changes:
- added .pairs (VMethod) functionality with tests
- fixed quoted.t failing test

---
version: 0.24_3
date:    Mon Jun 8 2009
changes:
- fixed bug, related to empty template body (http://rt.cpan.org/Public/Bug/Display.html?id=37061)
- fixed bug in Parser.yp, which produced compilation error for macroses
- fixed "intermediate instantiation" issue (http://rt.cpan.org/Public/Bug/Display.html?id=37539)
- fixed "iteration over empty object" issue (http://rt.cpan.org/Public/Bug/Display.html?id=37540)
- added and tested MACRO directive
- added PRE_PROCESS and POST_PROCESS configuration options
- added and tested global scope access via GLOBAL modifier (GLOBAL.jQeuery etc)
- added dummy LOCAL modifier, for symmetry
- added "init" method for Jemplate singleton
- added experimental RAW directive (RAW jQuery, equivalent of jQuery = GLOBAL.jQuery)

VMethods:
- added "list" for lists (http://rt.cpan.org/Public/Bug/Display.html?id=37570)
- added "item" for hashes
- fixed "import" for hashes

Test suite:
- combined back to a single copy

Patches:
- Integrated patch from RT#37895

version: 0.24_2
date: Monday June 08 10:37:54 PDT 2009
changes:
- Fix to get tests working on MSWin32 (rt23883)

---
version: 0.24
date:    Fri Sep 19 15:09:35 PDT 2008
changes:
- Convert tests to standard Test.Base setup!

---
version: 0.23_1
date: Monday August 18 15:22:03 PDT 2008
changes:
- Fixed issue with runtime_source_code that broke Catalyst::View::Jemplate
- Some beta MACRO functionality
- Ingy refactored tjs/ into tests/