@@ -93,6 +93,8 @@ t/9bug/37539-intermediate-instantiation.t
 t/9bug/37540-iterate-over-empty-object.t
 t/9bug/37895-inconsistent-jemplate-version.t
 t/9bug/53967-compiler-double-dot-path-fail.t
+t/9bug/53453-make-Jemplate-slice-like-TT-slice.t
+t/9bug/53454-array-range-operator.t
 tests/Makefile
 tests/README
 tests/bin/daemon
